# RoboDK-API

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  conanfile.txt
.github/workflows/: RoboDK-API.yml
C/: RoboDK_C_API.pro  RoboDK_C_API.sln  RoboDK_C_API.vcxproj  example.c  readme.md  robodk_api_c.c  robodk_api_c.h
C#/: .gitignore  RoboDK.cs  RoboDkApi.sln  RoboDkApi.sln.DotSettings  readme.md
C#/API/: CollisionPair.cs  DisplayRefType.cs  Doxyfile  ErrorPathType.cs  History.txt  IItem.cs  IRoboDk.cs  IRoboDkEventSource.cs  InteractiveType.cs  Item.cs  Mat.cs  MechanismType.cs  README.md  RoboDK-API-Documentation.url  RoboDK.cs  RoboDKEventListener.cs  RoboDKEventSource.cs  RoboDK_original.cs  RoboDKsubclass.cs  RoboDkApi.3.8.4.nupkg  RoboDkApi.4.2.3.nupkg  RoboDkApi.5.1.0.nupkg  RoboDkApi.5.4.3.nupkg  RoboDkApi.5.6.2.nupkg  RoboDkApi.5.6.5.nupkg  RoboDkApi.5.6.8.nupkg  RoboDkApi.5.8.0.nupkg  RoboDkApi.5.9.0.nupkg  RoboDkApi.csproj  RoboDkApi.nuspec  RoboDkApi.sln  RoboDkApi.sln.DotSettings  RoboDkApiCore.csproj  RoboDkCommandLineParameter.cs  RoboDkLink.cs  SocketExtension.cs  doc_update.bat  docfx.json  index.md  license.txt  (+3 more)
C#/APIUnitTest/: Base_Frame.sld  Box.sld  Palett_Rohteil-1.sld  Palettenhalter.sld  RoboDKAPITest.csproj  RoboDkApiTest.cs  TableOut.sld  robot.robot
C#/Example/: RoboDKSampleSolution.sln
C#/TesterProject/: TesterProject.vbproj
C++/: .gitignore  CMakeLists.txt  Config.cmake.in  readme.md  robodk_api.cpp  robodk_api.h
C++/Example/: Notes.txt  RoboDK-API-Cpp-Sample.pro  RoboDK-API-Cpp-Sample.pro.user.4.9-pre1  embedexample.cpp  embedexample.h  embedexample.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  robodk_api.cpp  robodk_api.h
C++/PluginApiExample/: README.md  iapprobodk.h  iitem.h  irobodk.h  pluginapiexample.cpp  pluginapiexample.h  pluginapiexample.pro  robodkinternalsocket.cpp  robodkinternalsocket.h  robodktypes.cpp  robodktypes.h
C/RoboDK C API/: RoboDK_C_API.sln  UpgradeLog.htm
Matlab/: API_Demo.m  Example_RoboDK.m  Example_RoboDK_DrawHexagon.m  Example_RoboDK_ModifyProgram.m  Example_RoboDK_SelectRobot.m  Fanuc_2_Pose.m  KUKA_2_Pose.m  Pose_2_Fanuc.m  Pose_2_KUKA.m  Pose_2_XYZRPW.m  README.MD  RoboDK API Documentation.url  RoboDK API Reference.url  RoboDK Example.url  RoboDK_Pose2Joints.m  RoboDK_Sample.mdl  RoboDK_ShowPose.m  RoboDK_getLink.m  RoboDK_getRobot.m  Robolink.m  RobolinkItem.m  XYZRPW_2_Pose.m  rotx.m  roty.m  rotz.m  transl.m
Matlab/html/: Example_RoboDK.html  Robolink.html  RobolinkItem.html
Matlab/tcpclient-tcpip-ICT/: Robolink.m
Python/: .gitignore  LICENSE  pylint_robodk.py  readme.md  robodk.py  robolink.py  setup.py
Python/Events/: robodk_event_loop.py
Python/Examples/: APT_Split.py  Add_Curve_by_Points.py  CalculateErrorsDistances.py  CameraAdd.py  CheckCollisions.py  Create_repeatability_test.py  Curve_Filter_AverageNormals.py  Curve_Project_2_Surface.py  CycleTimeStudy.py  DoPointWeld.py  (+51 more)
Python/Examples-RoboDK/: Raster Curve auto setup - Custom GUI.rdk
Tutorials/: README.md
TypeScript/: .npmignore  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
Visual Basic/: RoboDK_API.vb  readme.md
(+407 files in other folders)
